@@ -1,3 +1,4 @@
+- added pmsnare parser module (written by David Lang)
 ---------------------------------------------------------------------------
 Version 5.7.3  [V5-BETA] (rgerhards), 2011-02-07
 - added support for processing multi-line messages in imfile
